Closed
Bug 80988
Opened 24 years ago
Closed 24 years ago
Radio menus cause crash on gcc295 -O2 builds
Categories
(Core :: XUL, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla0.9.2
People
(Reporter: BenB, Assigned: cls)
References
Details
(Keywords: crash)
Attachments
(2 files)
873 bytes,
patch
|
Details | Diff | Splinter Review | |
1.11 KB,
patch
|
Details | Diff | Splinter Review |
Reproduction (for me 100%):
1. Addressbook
2. View | Show Name As, select any item in the submenu (e.g. "Last, First").
Actual result:
crash
Reporter | ||
Comment 1•24 years ago
|
||
My own Mozilla build from Mai 6th (I think), Linux, optimized, non-debug. New
(3th) Modern skin.
Keywords: crash
![]() |
||
Comment 2•24 years ago
|
||
WFM, Build id: 2001050515 (0.9) on W98SE.
Work for me using build 2001051604 on win2000. Reporter, please try on a latest
build. Fenella, can you try on the Linux build? Thanks.
Tried on my Mozilla debug build on Linux updated on 5/18. It works fine, no
crash. Mark WFM.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → WORKSFORME
Linux (2001-05-21-08 trunk)
Win32 (2001-05-21-11 trunk)
Mac (2001-05-17-08 trunk)
I cannot reproduce this bug.
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 6•24 years ago
|
||
But I do see it.
Mozilla nightly build, Linux gcc295, 20010527 (from UA string).
It happens in the said manu and also in Mailnews HTML Composer,
Options->Priority. It does not happen in Options->Format.
Currently, it takes 1s after clicking on the radio menu item until the app crashes.
The console output (snipped):
Compose: ComposeStartup
[nsIMsgIdentity: id1],[nsIMsgIdentity: id2],[nsIMsgIdentity:
id3],[nsIMsgIdentity: id4],[nsIMsgIdentity: id5],[nsIMsgIdentity:
id6],[nsIMsgIdentity: id7]
[...]
mailCharsetLoadListener: ISO-8859-1
Trying to position a sizeless window; caller should have called sizeToContent()
or sizeTo(). See bug 75649.
awClickEmptySpace
/usr/local/package/mozilla/current/run-mozilla.sh: line 72: 23430
Speicherzugriffsfehler $prog ${1+"$@"}
$ <path>/mozilla
[...]
profileName passed in: <snipped>
failed to set webshell window
imap://ben@smserver/INBOX
imap://ben@smserver...skipping, already opened
/usr/local/package/mozilla/current/run-mozilla.sh: line 72: 28080
Speicherzugriffsfehler $prog ${1+"$@"}
$ <path>/mozilla
[...]
set focus on the recipient
Set Message Format to 2
/usr/local/package/mozilla/current/run-mozilla.sh: line 72: 28099
Speicherzugriffsfehler $prog ${1+"$@"}
(Speicherzugriffsfehler (German) = memory access error)
REOPENing.
Status: VERIFIED → REOPENED
Resolution: WORKSFORME → ---
Reporter | ||
Comment 7•24 years ago
|
||
Oh, and the profile I use now is relatively new - created with that build.
Reporter | ||
Comment 8•24 years ago
|
||
It is also not spepcific to my system (to be exact: OS installation). I reported
that bug with a RH6.x system, and now I am on a new Debian installation.
![]() |
||
Comment 9•24 years ago
|
||
worksforme - buildid: 2001060804, win98.
![]() |
||
Comment 10•24 years ago
|
||
Ben, please re-test this bug..
Reporter | ||
Comment 11•24 years ago
|
||
fenella, I already did retest and then reopened. Also, I am seeing the bug all
the time during usage - View | Text Size | 150 % crashes it, but View | Text
Size | Larger doesn't.
Please try a gcc295 build.
Reporter | ||
Comment 12•24 years ago
|
||
From my user.js:
user_pref("ui.key.accelKey", 18);
user_pref("ui.key.menuAccessKey", 0);
user_pref("mail.imap.noop_check_count", 1);
user_pref("mailnews.headers.showUserAgent", true);
user_pref("converter.html2txt.header_strategy", 2);
user_pref("ui.submenuDelay", 0);
user_pref("browser.cache.disk.enable", false);
user_pref("browser.cache.disk_cache_size", 0);
user_pref("image.animation_mode", "once");
user_pref("font.min-size.variable.", 14);
user_pref("accessibility.accesskeycausesactivation", false);
Reporter | ||
Comment 13•24 years ago
|
||
Changing SUMMARY to reflect current understanding.
Since Beonex uses gcc295 -O2 for building *shipping* binaries, this is a severe
bug for us.
Reporter | ||
Comment 14•24 years ago
|
||
*** Bug 82962 has been marked as a duplicate of this bug. ***
Reporter | ||
Comment 15•24 years ago
|
||
REASSIGN.
Assignee: chuang → cls
Status: REOPENED → NEW
Component: Address Book → XP Toolkit/Widgets: Menus
Keywords: mozilla0.9.2
Product: MailNews → Browser
QA Contact: fenella → jrgm
Summary: Radio menus cause crash on gcc295 builds → Radio menus cause crash on gcc295 -O2 builds
![]() |
Assignee | |
Comment 16•24 years ago
|
||
So similiar to bug 61501, this problem seems to be caused by a mis-optimization
of a nsCOMPtr declared in a while loop. Moving the nsCOMPtr declaration outside
of the loop "fixes" the problem. Anyone care to update the c++ portability
guide with this tidbit?
Status: NEW → ASSIGNED
![]() |
Assignee | |
Comment 17•24 years ago
|
||
![]() |
Assignee | |
Comment 18•24 years ago
|
||
Comment 19•24 years ago
|
||
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
Reporter | ||
Comment 20•24 years ago
|
||
The patch fixes the problem for me.
Thanks, cls, for providing a fix so quickly!
![]() |
Assignee | |
Comment 21•24 years ago
|
||
Patch has been checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•