Workaround gcc -O2 compiler optimization problem by moving the declaration of a nsCOMPtr outside of a while loop. Bug #80988 r=braddr sr=scc a=asa